[package]
name = "roracache"
version = "0.0.0-b0"
edition = "2021"
authors = ["Solra Bizna <solra@bizna.name>"]
description = "FUSE filesystem that bolts aggressive caching and readahead onto another filesystem"
license = "MIT OR Apache-2.0"

[dependencies]
atty = "0.2"
crossbeam-channel = "0.5.8"
crossterm = "0.23"
fuser = "0.12"
nix = "0.26"
libc = "0.2"
liso = "1.0.2"
parking_lot = "0.12"
unicode-width = "0.1"